RESOLVENDO SCROLL - OVERFLOW: HIDDEN;

--- a/_css/specs.css
+++ b/_css/specs.css
@@ -4,12 +4,22 @@ section#conteudo {
     width: 1000px;
     margin: auto;
 }
+
 iframe#frame-spec {
-    width: 400px;
+    width: 380px;
     height:280px;
     border: none;
     overflow: hidden;
 }
+
 iframe#frame-spec::-webkit-scrollbar {
     display: none;
+}
+
+.remover-barra-rolagem{
+    overflow: hidden;
+}
+
+#topo{
+    background-color: yellow;
 }
